--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -82,11 +82,13 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-6">
-                            <script>document.write(new Date().getFullYear())</script> © Ifad Group.
+                            &copy;
+                            <script>document.write(new Date().getFullYear())</script> Ifad Group. All rights reserved.
+                            Powered by the Department of IT
                         </div>
                         <div class="col-sm-6">
                             <div class="text-sm-end d-none d-sm-block">
-                                Design & Develop by Hira
+                                @*Design & Develop by Hira*@
                             </div>
                         </div>
                     </div>
