--- a/Views/Dashboard/NationalWiseSkuKpiPartial.cshtml
+++ b/Views/Dashboard/NationalWiseSkuKpiPartial.cshtml
@@ -140,6 +140,41 @@
 
             </tr>
         }
+        <tr>
+            <td>
+                <a href="#"
+                   class="fw-medium text-reset">Hygiene</a>
+            </td>
+
+        </tr><!-- end tr -->
+        @foreach (System.Data.DataRow rows in ViewBag.dataTable5.Rows)
+        {
+            <tr>
+                <td style="text-align: center;">
+                    <span class="text-primary">Delivery Bounce Percentage %</span>
+                </td>
+
+                <td style="text-align: center;">
+                    <span class="text-primary">@rows["LAST_MONTH_ACH"]</span>
+                </td>
+                <td style="text-align: center;">
+                    <span class="text-primary">@rows["TODAYS_TARGET"]</span>
+                </td>
+                <td style="text-align: center;">
+                    <span class="text-primary">@rows["TODAYS_ACH"]</span>
+                </td>
+                <td style="text-align: center;">
+                    <span class="text-primary">@rows["LAST_MTD_ACH"]</span>
+                </td>
+                <td style="text-align: center;">
+                    <span class="text-primary">@rows["THIS_MONTH_MTD_TARGET"]</span>
+                </td>
+                <td style="text-align: center;">
+                    <span class="text-primary">@rows["THIS_MONTH_MTD_ACH"]</span>
+                </td>
+
+            </tr>
+        }
 
     </tbody><!-- end tbody -->
 </table><!-- end table -->
