--- a/Views/Dashboard/DashboardHeaderPartial.cshtml
+++ b/Views/Dashboard/DashboardHeaderPartial.cshtml
@@ -5,7 +5,7 @@
             <div class="d-flex align-items-center">
                 <div class="flex-grow-1 overflow-hidden">
                     <p class="text-uppercase fw-medium text-muted text-truncate mb-0">
-                        Monthly Sales Amount
+                        Monthly Sales Amount (In Lac)
                     </p>
                 </div>
                 @{
@@ -128,7 +128,7 @@
                     </p>
                 </div>
                 @*<div class="flex-shrink-0">
-                    <h5 class="text-muted fs-14 mb-0">
+                    <h5 class="text-muted fs-14 mb-0"> 
                         Compared to -2.18%
                     </h5>
                 </div>*@
