add product drill down

--- a/Views/Dashboard/NationalWiseSkuKpiPartial.cshtml
+++ b/Views/Dashboard/NationalWiseSkuKpiPartial.cshtml
@@ -81,7 +81,8 @@
         {
             <tr>
                 <td style="text-align: center;">
-                    <span class="text-primary">@rows["FOCUS_CATEGORY_NAME"]</span>
+                    <a href="#"> <span class="text-primary focus-category" id="@rows["FOCUS_CATEGORY_ID"]">
+                        @rows["FOCUS_CATEGORY_NAME"]</span></a>
                 </td>
 
                 <td style="text-align: center;">
