--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,24 +8,26 @@
     <meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
     <meta content="Themesbrand" name="author" />
     <!-- App favicon -->
-    <link rel="shortcut icon" href="Content/assets/images/favicon.ico">
+    <link rel="shortcut icon" href="~/Content/assets/images/favicon.ico">
 
     <!-- jsvectormap css -->
-    <link href="Content/assets/libs/jsvectormap/jsvectormap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/assets/libs/jsvectormap/jsvectormap.min.css" rel="stylesheet" type="text/css" />
 
     <!--Swiper slider css-->
-    <link href="Content/assets/libs/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/assets/libs/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css" />
 
     <!-- Layout config Js -->
-    <script src="Content/assets/js/layout.js"></script>
+    <script src="~/Content/assets/js/layout.js"></script>
     <!-- Bootstrap Css -->
-    <link href="Content/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- Icons Css -->
-    <link href="Content/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
     <!-- App Css-->
-    <link href="Content/assets/css/app.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/assets/css/app.min.css" rel="stylesheet" type="text/css" />
     <!-- custom Css-->
-    <link href="Content/assets/css/custom.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/assets/css/custom.min.css" rel="stylesheet" type="text/css" />
+
+    @RenderSection("css", required: false)
 </head>
 <body>
 
@@ -123,28 +125,28 @@
 
     @RenderSection("scripts", required: false)
 
-    <script src="Content/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="Content/assets/libs/simplebar/simplebar.min.js"></script>
-    <script src="Content/assets/libs/node-waves/waves.min.js"></script>
-    <script src="Content/assets/libs/feather-icons/feather.min.js"></script>
-    <script src="Content/assets/js/pages/plugins/lord-icon-2.1.0.js"></script>
-    <script src="Content/assets/js/plugins.js"></script>
+    <script src="~/Content/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/Content/assets/libs/simplebar/simplebar.min.js"></script>
+    <script src="~/Content/assets/libs/node-waves/waves.min.js"></script>
+    <script src="~/Content/assets/libs/feather-icons/feather.min.js"></script>
+    <script src="~/Content/assets/js/pages/plugins/lord-icon-2.1.0.js"></script>
+    <script src="~/Content/assets/js/plugins.js"></script>
 
     <!-- apexcharts -->
-    <script src="Content/assets/libs/apexcharts/apexcharts.min.js"></script>
+    <script src="~/Content/assets/libs/apexcharts/apexcharts.min.js"></script>
 
     <!-- Vector map-->
-    <script src="Content/assets/libs/jsvectormap/jsvectormap.min.js"></script>
-    <script src="Content/assets/libs/jsvectormap/maps/world-merc.js"></script>
+    <script src="~/Content/assets/libs/jsvectormap/jsvectormap.min.js"></script>
+    <script src="~/Content/assets/libs/jsvectormap/maps/world-merc.js"></script>
 
     <!--Swiper slider js-->
-    <script src="Content/assets/libs/swiper/swiper-bundle.min.js"></script>
+    <script src="~/Content/assets/libs/swiper/swiper-bundle.min.js"></script>
 
     <!-- Dashboard init -->
-    <script src="Content/assets/js/pages/dashboard-ecommerce.init.js"></script>
+    <script src="~/Content/assets/js/pages/dashboard-ecommerce.init.js"></script>
 
     <!-- App js -->
-    <script src="Content/assets/js/app.js"></script>
+    <script src="~/Content/assets/js/app.js"></script>
     <script>
         /*function showSpinner() {
             $('#global-spinner').removeClass('d-none');
